# CS-25-303-SON-clinicians

./: .gitattributes  README.md
Documentation/: Readme.md  architecture.md  redcap-integration.md  security-considerations.md
Documentation/docs/: book.toml
Documentation/docs/src/: SUMMARY.md  hipaa.md
Documentation/docs/src/backend/: README.md  authentication.md
Notes and Research/: HIPAA.md
Project Deliverables/: CS-25-303 Spring.pptx  CS-25-303_Poster.pptx
Status Reports/: Project Plan.md  Readme.md  Status Report Fall Week 10.md  Status Report Fall Week 11.md  Status Report Fall Week 12.md  Status Report Spring Week 03.md  Status Report Spring Week 04.md  Status Report Spring Week 05.md  Status Report Spring Week 06.md  Status Report Spring Week 07.md
src/API Examples/typescript/: README.md  apiCore.ts  cli.ts  deno.json  participant-info.ts  researcher-example.ts  search.ts  stats.ts
src/API Examples/typescript/types/: goals.ts  locations.ts  medications.ts  participant.ts  researcher.ts  user.ts
src/backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  entrypoint.sh  justfile
src/backend/backend/: Cargo.toml  build.rs
src/backend/backend/src/: config.rs  logging.rs  main.rs  utils.rs
src/backend/backend/src/app/: error.rs  mod.rs  open_api.rs  request_logging.rs  state.rs  web.rs
src/backend/backend/src/app/api/: auth.rs  location.rs  mod.rs  user.rs
src/backend/backend/src/app/api/admin/: mod.rs  user.rs
src/backend/backend/src/app/api/debug_reports/: mod.rs
src/backend/backend/src/app/api/participant/: case_note.rs  goals.rs  medications.rs  mod.rs  stats.rs
src/backend/backend/src/app/api/researcher/: mod.rs
src/backend/backend/src/app/authentication/: api_middleware.rs  header.rs  mod.rs  session.rs
src/backend/backend/src/app/authentication/permissions/: mod.rs  response.rs
src/backend/backend/src/app/authentication/session/: data.rs
src/backend/backend/src/app/error/: api.rs  bad_request.rs
src/backend/backend/src/app/request_logging/: layer.rs  metrics.rs  mod.rs  request_id.rs  request_span.rs  response_body.rs
src/backend/backend/src/app/utils/: ip_addr.rs  mod.rs  response.rs
src/backend/backend/src/app/utils/response/: builder.rs
src/backend/backend/src/config/: robots.rs
src/backend/backend/src/logging/: config.rs
src/backend/backend/src/logging/config/: otel.rs
src/backend/backend/src/utils/: header.rs  requests.rs  response.rs
src/backend/backend/src/utils/request_logging/: mod.rs  request_id.rs  request_span.rs
src/backend/backend/src/utils/requests/: ip_addr.rs  json.rs
src/backend/backend/src/utils/response/: builder.rs
src/backend/core/: Cargo.toml  DatabaseQueries.md  test.env.sample
src/backend/core/migrations/: 20241109103931_participants.up.sql  20241112193349_users.up.sql  20241113115631_case_notes.up.sql
src/backend/core/src/: lib.rs
src/backend/core/src/database/: config.rs  mod.rs  table_utils.rs  tools.rs
src/backend/core/src/database/queries/: array.rs  mod.rs  number.rs
src/backend/core/src/database/queries/number/: parse.rs
src/backend/core/src/database/red_cap/: locations.rs  mod.rs
src/backend/core/src/database/red_cap/case_notes/: mod.rs  new.rs  queries.rs  questions.rs
src/backend/core/src/database/red_cap/debug_reports/: goals.rs  medications.rs  mod.rs
src/backend/core/src/database/red_cap/participants/: demographics.rs  goals.rs  health_overview.rs  lookup.rs  medications.rs  mod.rs  new.rs  researcher.rs
src/backend/core/src/database/red_cap/participants/researcher/: types.rs
src/backend/core/src/database/red_cap/participants/stats/: blood_pressure.rs  mod.rs  other.rs
src/backend/core/src/database/red_cap/questions/: default.rs  mod.rs  new.rs  queries.rs  question_options.rs  requirements.rs
src/backend/core/src/database/tools/: insert.rs  pagination.rs  select.rs  select_v2.rs  table_layout.rs  testing.rs  traits.rs  update.rs  value.rs  where_sql.rs
src/backend/core/src/database/tools/insert/: conflict.rs  many.rs
src/backend/core/src/database/tools/insert/many/: row.rs
src/backend/core/src/database/tools/select/: count.rs  exists.rs  join.rs  sub.rs
src/backend/core/src/database/tools/select_v2/: sub.rs
src/backend/core/src/database/user/: login.rs  mod.rs  new.rs  roles.rs  tools.rs
src/backend/core/src/database/user/auth/: mod.rs
src/backend/core/src/red_cap/: converter.rs  enum_types.rs  mod.rs  processing.rs  tasks.rs  types.rs
src/backend/core/src/red_cap/api/: mod.rs  request.rs  responses.rs  utils.rs
src/backend/core/src/red_cap/converter/: case_notes.rs  medications.rs  participants.rs
src/backend/core/src/red_cap/enum_types/: multi_select.rs
src/backend/core/src/red_cap/tasks/: from.rs  push.rs
src/backend/core/src/user/: scopes.rs
src/backend/core/src/utils/: mod.rs
src/backend/core/src/utils/testing/: config.rs  db.rs  mod.rs
src/backend/data-tools/: Cargo.toml  README.md
src/backend/data-tools/random/sets/: case_note_other_health_measures.json  goals.json  medications.json  participants.json
src/backend/data-tools/src/: config.rs  main.rs  pull.rs  push.rs  random.rs
src/backend/data-tools/src/admin/: create_user.rs  mod.rs
src/backend/data-tools/src/random/: core.rs  data.rs  random_user.rs  set.rs  utils.rs
src/backend/macros/: Cargo.toml
src/backend/macros/src/: columns.rs  lib.rs  permissions.rs  red_cap_enum.rs
src/backend/test-data/: Cargo.toml  README.md
src/backend/test-data/random/sets/: medications.json
src/backend/test-data/src/: main.rs  random.rs
src/backend/test-data/src/random/: core.rs  set.rs
src/frontend/: .easignore  .eslintrc.js  README.md  app.json  babel.config.js  cesconfig.json  eas.json  justfile  package-lock.json  package.json  prettier.config.js
src/frontend/app/: +not-found.tsx  _layout.tsx  login.tsx
src/frontend/components/: LabelAndItem.tsx  LocationName.tsx  NoDataScreen.tsx  ProgramSelector.tsx  ProtectedRoute.tsx
src/frontend/contexts/: SessionContext.tsx
src/frontend/lib/: RequestTypes.ts  api.ts
(+32 files in other folders)
