[package]
name = "cs25-303-backend"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
# Web
axum = { version = "0.8", features = ["macros", "tokio"] }
axum-extra = { version = "0.10", features = [
    "multipart",
    "cookie",
    "typed-header",
] }
tower = { version = "0.5", features = ["limit", "timeout"] }
tower-http = { version = "0.6", features = ["full"] }
tower-service = "0.3.2"
hyper.workspace = true
hyper-util.workspace = true
http.workspace = true
http-body = "1"
http-body-util.workspace = true
# API Documentation
utoipa = { workspace = true, features = ["axum_extras"] }
# TODO: When axum 0.8 support is released move this back to a stable version
utoipa-scalar = { version = "0.3", features = ["axum"], optional = true }
# Async utilities
pin-project = "1"
futures = "0.3"
# TLS
tokio-rustls = "0.26"
rustls = { version = "0.23" }
rustls-pemfile = { version = "2" }

serde.workspace = true
serde_json.workspace = true
serde-env = "0.2.0"
toml = "0.8"
# Utilities
strum.workspace = true
derive_more.workspace = true
# CLI
clap = { version = "4", features = ["derive"] }
# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
# OpenTelemetry - Tracing framework
tracing-opentelemetry = "0.28"
opentelemetry = { version = "0.27", features = [] }
opentelemetry_sdk = { version = "0.27", features = [
    "rt-tokio",
    "trace",
    "metrics",
    "logs",
] }
opentelemetry-otlp = { version = "0.27", default-features = true, features = [
    "grpc-tonic",
    "http-proto",
    "http-json",
] }
opentelemetry-appender-tracing = "0.27"
sqlx.workspace = true
chrono.workspace = true
anyhow.workspace = true
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
thiserror.workspace = true
cs25-303-core.workspace = true
redb = "2"
tuxs-config-types = { git = "https://github.com/wyatt-herkamp/tuxs-config-types.git", features = [
    "chrono",
] }
base64 = "0.22"
ahash.workspace = true
[features]
default = ["utoipa-scalar"]
